feature/disable_ssh_multiplexing-https://github.com/ansible/ansible/issues/13278

--- a/myenvironments/conf/sshconfigclientnoroot.template
+++ b/myenvironments/conf/sshconfigclientnoroot.template
@@ -1,6 +1,7 @@
 StrictHostKeyChecking no
 ServerAliveInterval 30
 ServerAliveCountMax 3
+ControlMaster no
 
 Host github.com 
  IdentityFile ~/.ssh/id_rsa_private_github
