--- a/requirements-ansible-python/requirements-ansible-2.1.1.0-OST-kilo.txt
+++ b/requirements-ansible-python/requirements-ansible-2.1.1.0-OST-kilo.txt
@@ -1,9 +1,9 @@
 ansible==2.1.1.0
 anyjson==0.3.3
+appdirs==1.4.0
 Babel==2.3.4
 cffi==1.8.3
-cliff==1.10.1
-cliff-tablib==1.1
+cliff==2.2.0
 cmd2==0.6.8
 cryptography==1.5
 debtcollector==1.8.0
@@ -26,10 +26,12 @@ monotonic==1.2
 msgpack-python==0.4.8
 netaddr==0.7.18
 netifaces==0.10.5
-oslo.config==1.9.3
-oslo.i18n==1.5.0
-oslo.serialization==1.4.0
-oslo.utils==1.4.2
+openstacksdk==0.9.6
+os-client-config==1.21.1
+oslo.config==3.17.0
+oslo.i18n==3.9.0
+oslo.serialization==2.13.0
+oslo.utils==3.16.0
 paramiko==2.0.2
 pbr==0.11.1
 ply==3.6
@@ -42,18 +44,18 @@ pyOpenSSL==16.1.0
 pyparsing==2.1.9
 python-barbicanclient==3.0.3
 python-ceilometerclient==1.1.2
-python-cinderclient==1.1.3
+python-cinderclient==1.9.0
 python-designateclient==1.1.1
-python-glanceclient==0.17.3
+python-glanceclient==2.5.0
 python-heatclient==0.4.0
 python-ironicclient==0.5.1
-python-keystoneclient==1.3.4
+python-keystoneclient==3.5.0
 python-manilaclient==1.1.0
 python-muranoclient==0.5.9
-python-neutronclient==2.4.0
-python-novaclient==2.23.2
+python-neutronclient==4.0.0
+python-novaclient==6.0.0
 python-ntlm3==1.0.2
-python-openstackclient==1.0.5
+python-openstackclient==2.3.0
 python-saharaclient==0.8.0
 python-swiftclient==2.4.0
 python-troveclient==1.0.9
@@ -62,13 +64,13 @@ pywinrm==0.2.0
 PyYAML==3.12
 requests==2.11.1
 requests-ntlm==0.3.0
+requestsexceptions==1.1.3
 rfc3986==0.4.1
 simplejson==3.8.2
 six==1.10.0
-stevedore==1.3.0
-tablib==0.11.2
+stevedore==1.17.1
 unicodecsv==0.14.1
-warlock==1.3.0
+warlock==1.2.0
 wrapt==1.10.8
 xmltodict==0.10.2
 yaql==0.2.7
