--- a/requirements-ansible-python/requirements-ansible-2.0.2.0-OST-kilo.txt
+++ b/requirements-ansible-python/requirements-ansible-2.0.2.0-OST-kilo.txt
@@ -1,5 +1,4 @@
 ansible==2.0.2.0
-anyjson==0.3.3
 appdirs==1.4.0
 Babel==2.3.4
 cffi==1.8.3
@@ -11,7 +10,6 @@ enum34==1.1.6
 funcsigs==1.0.2
 functools32==3.2.3.post2
 futures==3.0.5
-httplib2==0.9.2
 idna==2.1
 ipaddress==1.0.17
 iso8601==0.1.11
@@ -21,44 +19,34 @@ jsonpatch==1.14
 jsonpointer==1.10
 jsonschema==2.5.1
 keystoneauth1==2.12.1
-lxml==3.6.4
 MarkupSafe==0.23
 monotonic==1.2
 msgpack-python==0.4.8
 netaddr==0.7.18
 netifaces==0.10.5
-openstacksdk==0.9.6
+openstacksdk==0.9.7
 os-client-config==1.21.1
+osc-lib==1.1.0
 oslo.config==3.17.0
 oslo.i18n==3.9.0
 oslo.serialization==2.13.0
 oslo.utils==3.16.0
 paramiko==2.0.2
-pbr==0.11.1
-ply==3.6
+pbr==1.10.0
 positional==1.1.1
 prettytable==0.7.2
 pyasn1==0.1.9
 pycparser==2.14
 pycrypto==2.6.1
-pyOpenSSL==16.1.0
 pyparsing==2.1.9
-python-barbicanclient==3.0.3
-python-ceilometerclient==1.1.2
 python-cinderclient==1.9.0
-python-designateclient==1.1.1
 python-glanceclient==2.5.0
-python-heatclient==0.4.0
-python-ironicclient==0.5.1
+python-heatclient==1.4.0
 python-keystoneclient==3.5.0
-python-manilaclient==1.1.0
-python-muranoclient==0.5.9
-python-neutronclient==4.0.0
-python-novaclient==6.0.0
-python-openstackclient==2.3.0
-python-saharaclient==0.8.0
-python-swiftclient==2.4.0
-python-troveclient==1.0.9
+python-neutronclient==6.0.0
+python-novaclient==4.0.0
+python-openstackclient==3.2.0
+python-swiftclient==3.1.0
 pytz==2016.6.1
 pywinrm==0.1.1
 PyYAML==3.12
@@ -72,4 +60,3 @@ unicodecsv==0.14.1
 warlock==1.2.0
 wrapt==1.10.8
 xmltodict==0.10.2
-yaql==0.2.7
