--- a/myenvironments/conf/requirements-ansible-2.2.0.0-OST-kilo.txt
+++ b/myenvironments/conf/requirements-ansible-2.2.0.0-OST-kilo.txt
@@ -4,8 +4,10 @@ Babel==2.3.4
 cffi==1.9.1
 cliff==2.3.0
 cmd2==0.6.9
-cryptography==1.6
-debtcollector==1.9.0
+cryptography==1.7.1
+debtcollector==1.10.0
+decorator==4.0.10
+dogpile.cache==0.6.2
 enum34==1.1.6
 funcsigs==1.0.2
 functools32==3.2.3.post2
@@ -14,23 +16,27 @@ idna==2.1
 ipaddress==1.0.17
 iso8601==0.1.11
 Jinja2==2.8
+jmespath==0.9.0
 jsonpatch==1.14
 jsonpointer==1.10
 jsonschema==2.5.1
-keystoneauth1==2.15.0
+keystoneauth1==2.16.0
 MarkupSafe==0.23
 monotonic==1.2
 msgpack-python==0.4.8
+munch==2.0.4
 netaddr==0.7.18
 netifaces==0.10.5
+ntlm-auth==1.0.2
 openstacksdk==0.9.10
+ordereddict==1.1
 os-client-config==1.24.0
 osc-lib==1.2.0
-oslo.config==3.19.0
-oslo.i18n==3.10.0
-oslo.serialization==2.14.0
-oslo.utils==3.18.0
-paramiko==2.0.2
+oslo.config==3.21.0
+oslo.i18n==3.11.0
+oslo.serialization==2.15.0
+oslo.utils==3.20.0
+paramiko==2.1.1
 pbr==1.10.0
 positional==1.1.1
 prettytable==0.7.2
@@ -39,24 +45,29 @@ pycparser==2.17
 pycrypto==2.6.1
 pyparsing==2.1.10
 python-cinderclient==1.9.0
+python-designateclient==2.3.0
 python-glanceclient==2.5.0
-python-heatclient==1.4.0
-python-keystoneclient==3.7.0
+python-heatclient==1.6.1
+python-ironicclient==1.8.0
+python-keystoneclient==3.8.0
+python-magnumclient==2.3.1
+python-mistralclient==2.1.2
 python-neutronclient==6.0.0
 python-novaclient==6.0.0
-python-ntlm3==1.0.2
-python-openstackclient==3.2.0
-python-swiftclient==3.1.0
-pytz==2016.7
+python-openstackclient==3.4.1
+python-swiftclient==3.2.0
+python-troveclient==2.6.0
+pytz==2016.10
 pywinrm==0.2.1
 PyYAML==3.12
-requests==2.12.1
-requests-ntlm==0.3.0
+requests==2.12.4
+requests-ntlm==1.0.0
 requestsexceptions==1.1.3
 rfc3986==0.4.1
+shade==1.13.2
 simplejson==3.10.0
 six==1.10.0
-stevedore==1.18.0
+stevedore==1.19.1
 unicodecsv==0.14.1
 warlock==1.2.0
 wrapt==1.10.8
